k8s/infrastructure/base/controllers/sm-operator/base/deployment.yaml
---
# Source: sm-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-operator-controller-manager
  labels:
    app.kubernetes.io/component: manager
    control-plane: controller-manager
    helm.sh/chart: sm-operator-0.1.0-Beta
    app.kubernetes.io/name: sm-operator
    app.kubernetes.io/instance: sm-operator
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/created-by: sm-operator
    app.kubernetes.io/part-of: sm-operator
  namespace: sm-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: sm-operator
      app.kubernetes.io/instance: sm-operator
  template:
    metadata:
      labels:
        control-plane: controller-manager
        app.kubernetes.io/name: sm-operator
        app.kubernetes.io/instance: sm-operator
      annotations:
        kubectl.kubernetes.io/default-container: manager
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
                    - arm64
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
      containers:
      - args:
          - --secure-listen-address=0.0.0.0:8443
          - --upstream=http://127.0.0.1:8080/
          - --logtostderr=true
          - --v=0
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.14.4
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      - args:
          - --health-probe-bind-address=:8081
          - --metrics-bind-address=127.0.0.1:8080
          - --leader-elect
        command:
        - /manager
        image: ghcr.io/bitwarden/sm-operator:0.1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: sm-operator-controller-manager
      terminationGracePeriodSeconds: 10
